Bug 203869 - Distribution list members are not included in the Kolab xml
Summary: Distribution list members are not included in the Kolab xml
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Kolab Resource (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-14 19:44 UTC by Sabine Faure
Modified: 2012-06-08 18:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
.xml file found in Kmail after creating a new Group with a couple of contacts (265 bytes, text/plain)
2009-10-09 13:35 UTC, Sabine Faure
Details
kolab. xml file received when creating a new group with a few contacts with the correct format now. (596 bytes, text/plain)
2010-04-14 23:43 UTC, Sabine Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-08-14 19:44:58 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Configure Akonadi with an IMAP and Kolab resource.
- Create a new group called 'Group A' with a couple of members in it.
- Sync in Kmail
- A new email should arrive in the 'Contacts' folder.

-> In it, only the following lines are shown at the end:
<display-name>Group A</display-name>
<member/>
<distribution-list>

Whereas in the 'The Kolab Storage Format
2.0rc2' documentation on page 18, it says:

<!-- Distribution-list specific fields -->
<display-name>(string)</display-name>
{<member>
<display-name>(string)</display-name>
<smtp-address>(string)</smtp-address>
</member>}
</distribution-list>

SVN REV 1010699
Comment 1 Tobias Koenig 2009-08-14 20:15:58 UTC
Hej Sabine,

could you update your installation please and try again?
I did several changes to the distribution handling code in trunk/kdepim
today that might fix these issues.

Ciao,
Tobias
Comment 2 Sabine Faure 2009-08-15 01:02:30 UTC
I retested with SVN REV 1011519 and only the following lines are displayed:
<display-name>Group A</display-name>
</distribution-list>

So the bug is still there.
Comment 3 Sabine Faure 2009-10-09 13:31:24 UTC
I retested this today and I still get the same thing from the kolab.xml file:

<display-name>Group A</display-name>
</distribution-list>

Trunk, Svn Rev 1032841
Comment 4 Sabine Faure 2009-10-09 13:35:13 UTC
Created attachment 37470 [details]
.xml file found in Kmail after creating a new Group with a couple of contacts

See Kolab.xml file attached

Trunk, Svn Rev 1032841
Comment 5 Tobias Koenig 2010-04-09 12:15:37 UTC
SVN commit 1112844 by tokoe:

Do not lose distribution list members

BUG: 203869


 M  +3 -0      distributionlist.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1112844
Comment 6 Sabine Faure 2010-04-14 23:38:09 UTC
I retested this today and it is corrected now.

The correct format is now shown in the kolab.xml file (see attachment underneath)


Trunk, Svn Rev 1114350
Comment 7 Sabine Faure 2010-04-14 23:43:16 UTC
Created attachment 42793 [details]
kolab. xml file received when creating  a new group with a few contacts with the correct format now.

Trunk, Svn Rev 1114350