Do not lose distribution list members

BUG: 203869

svn path=/trunk/KDE/kdepim/runtime/; revision=1112844